<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.taxime.PickupAddressActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_address"
            android:id="@+id/enterAddress"
            android:gravity="left|center_vertical"
            android:drawableRight="@android:drawable/ic_menu_add" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_address"
            android:id="@+id/currentLocation"
            android:layout_gravity="center_horizontal"
            android:drawableRight="@android:drawable/ic_menu_mylocation"
            android:gravity="left|center_vertical" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/my_addresses"
            android:id="@+id/fromMyAddresses"
            android:layout_gravity="center_horizontal"
            android:drawableRight="@android:drawable/ic_menu_myplaces"
            android:gravity="left|center_vertical" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_map"
            android:id="@+id/fromMap"
            android:layout_gravity="center_horizontal"
            android:drawableRight="@android:drawable/ic_menu_mapmode"
            android:gravity="left|center_vertical" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/from_contacts"
            android:id="@+id/fromContactBook"
            android:layout_gravity="center_horizontal"
            android:drawableRight="@android:drawable/ic_menu_search"
            android:gravity="left|center_vertical" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/fromHistory"
            android:id="@+id/fromHistory"
            android:layout_gravity="center_horizontal"
            android:drawableRight="@android:drawable/ic_menu_recent_history"
            android:gravity="left|center_vertical" />
    </LinearLayout>
</RelativeLayout>
