<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.taxime.HomeActivity">

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/book"
        android:id="@+id/book"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="left|center_vertical"
        android:drawableRight="@android:drawable/ic_media_play" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_bookings"
        android:id="@+id/myBookings"
        android:layout_below="@+id/book"
        android:layout_alignParentStart="true"
        android:gravity="top|center_vertical"
        android:drawableRight="@android:drawable/ic_media_play" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/saved_addresses"
        android:id="@+id/savedAdresses"
        android:layout_below="@+id/myBookings"
        android:layout_alignParentStart="true"
        android:gravity="top|center_vertical"
        android:drawableRight="@android:drawable/ic_media_play" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:id="@+id/profile"
        android:layout_below="@+id/savedAdresses"
        android:layout_alignParentStart="true"
        android:gravity="top|center_vertical"
        android:drawableRight="@android:drawable/ic_media_play" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/call_taxi"
        android:id="@+id/callTaxi"
        android:layout_below="@+id/profile"
        android:layout_alignParentStart="true"
        android:gravity="top|center_vertical"
        android:drawableRight="@android:drawable/ic_media_play" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/send_message"
        android:id="@+id/sendMessage"
        android:layout_below="@+id/callTaxi"
        android:layout_alignParentStart="true"
        android:gravity="top|center_vertical"
        android:drawableRight="@android:drawable/ic_media_play" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="About Us"
        android:id="@+id/aboutUs"
        android:layout_below="@+id/sendMessage"
        android:layout_alignParentStart="true"
        android:gravity="top|center_vertical"
        android:drawableRight="@android:drawable/ic_media_play" />

</RelativeLayout>
