<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.taxime.EnterPickupAddressActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/addressField"
            android:layout_gravity="left"
            android:hint="@string/address_hint" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/suburbField"
            android:layout_gravity="left"
            android:hint="@string/suburb_hint" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/postcodeField"
                android:layout_gravity="left"
                android:maxLength="4"
                android:hint="@string/postcode" />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/stateSpinner"
                android:layout_weight="1"
                android:layout_gravity="left"
                android:entries="@array/states_array"
                android:forceHasOverlappingRendering="false" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_gravity="center_horizontal"
            android:background="#33A1DE"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:id="@+id/backBtn"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/back_icon" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/next"
                android:id="@+id/nextBtn"
                android:layout_alignParentRight="true"
                android:drawableRight="@drawable/next_icon" />
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>
