<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.taxime.ReviewBookingActivity"
    android:minHeight="0dp"
    android:minWidth="0dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:layout_margin="1dp">

            <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/scrollView"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/vehicle_type"
                        android:id="@+id/vehicleTypeHeader" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Medium Text"
                        android:id="@+id/vehicleTypeText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/pickup_address"
                        android:id="@+id/pickupAddressHeader"
                        android:singleLine="false" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Medium Text"
                        android:id="@+id/pickupAddressText" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="@string/other_info"
                        android:id="@+id/otherInfoHeader" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="Medium Text"
                        android:id="@+id/otherInfoText" />

                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/next"
                        android:id="@+id/nextBtn"
                        android:layout_gravity="right"
                        android:drawableRight="@drawable/next_icon" />

                </LinearLayout>
            </ScrollView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".3">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentEnd="false"
                android:layout_alignParentStart="false"
                android:background="#000000">

                <Button
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:text="@string/change_taxi_type"
                    android:id="@+id/changeTypeBtn"
                    android:layout_weight=".5"
                    android:background="#ffffff"
                    android:layout_margin="1dp" />

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight=".5">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/edit_address"
                        android:id="@+id/editAddressBtn"
                        android:layout_weight=".5"
                        android:background="#ffffff"
                        android:layout_margin="1dp" />

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:text="@string/edit_other_info"
                        android:id="@+id/editOtherInfoBtn"
                        android:layout_weight=".5"
                        android:background="#ffffff"
                        android:layout_margin="1dp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
