<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.taxime.SelectVehicleActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/vehicleTypeGroup">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/standard_choice"
                android:id="@+id/standard"
                android:checked="true" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wagon"
                android:id="@+id/wagon" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wheelchair"
                android:id="@+id/wheelchair" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxi"
                android:id="@+id/maxi" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="16dp"
                android:background="#33A1DE"
                android:clickable="false" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BACK"
                android:id="@+id/back"
                android:layout_alignParentEnd="false"
                android:layout_alignParentStart="false"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/back_icon" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NEXT"
                android:id="@+id/next"
                android:layout_alignParentEnd="false"
                android:layout_alignParentRight="true"
                android:drawableLeft="@drawable/next_icon" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>
