<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.taxime.EnterOtherInfoActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SET DATE..."
                android:id="@+id/dateBtn" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:ems="10"
                android:id="@+id/dateField"
                android:layout_weight="1"
                android:gravity="center"
                android:editable="false"
                android:enabled="false"
                android:textIsSelectable="false"
                android:layout_gravity="center"
                android:autoText="false"
                android:background="@android:drawable/editbox_background" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SET TIME..."
                android:id="@+id/timeBtn" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:inputType="time"
                android:ems="10"
                android:id="@+id/timeField"
                android:layout_weight="1"
                android:gravity="center"
                android:editable="false"
                android:enabled="false"
                android:layout_gravity="center"
                android:background="@android:drawable/editbox_background" />

        </LinearLayout>

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameField"
            android:hint="@string/contact_name" />

        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phoneField"
            android:hint="@string/contact_number" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="ADD..."
                android:id="@+id/addBtn"
                android:layout_gravity="center" />

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/notesField"
                android:layout_weight="1"
                android:hint="@string/notes_to_driver"
                android:minLines="4"
                android:textAlignment="textStart"
                android:layout_gravity="center_horizontal"
                android:enabled="false" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#33A1DE"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="16dp">
        </View>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="BACK"
                android:id="@+id/backBtn"
                android:layout_alignParentLeft="true"
                android:drawableLeft="@drawable/back_icon" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NEXT"
                android:id="@+id/nextBtn"
                android:layout_alignParentRight="true"
                android:drawableRight="@drawable/next_icon" />
        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>
